# vita-redhat

./: .env.example  .gitignore  Dockerfile  Dockerfile.modelserver  makefile  pyproject.toml  risk_analysis.yaml
chart/: Chart.yaml  values.yaml
chart/charts/streaming-processors/: values.yaml
chart/charts/streaming-processors/templates/: deployment.yaml  service.yaml
chart/charts/websockets-server/: Chart.yaml  values.yaml
chart/charts/websockets-server/templates/: deployment.yaml
vita/: __main__.py
vita/consumers/: vita_consumer.py
vita/simulator/: blood_glucose_producer.py  simulator.py
vita/stream_processing/: glucose_processor.py
vita/stream_processing/reducers/: glucose_reducer.py
vita/utils/: base_consumer.py  base_producer.py  config.py  logger.py  quix_kafka_connection.py
vita/websocket_server/: server.py
