[tool.poetry]
name = "vita"
packages = [{include = "vita"}]
version = "0.1.0"
description = ""
authors = ["Yesid Lopez <<yesid.leonardo.lopez@hotmail.com>>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
simglucose = "^0.2.11"
kafka-python = "^2.0.2"
quixstreams = "^3.1.0"


[tool.poetry.group.websocket-server.dependencies]
websocket = "^0.2.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.model-server.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.4"}
transformers = "^4.46.2"
torch = "^2.5.1"
accelerate = "^1.1.1"
langchain-core = "^0.3.15"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langchain-huggingface = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
